fix: restore SABR compatibility before Android 13